# epi-recorder

./: .aiignore  .env.example  .gitattributes  .gitignore  0  AIUC1_COMMENT_REWRITE.md  AIUC1_OUTREACH.md  AIUC1_SUBMISSION.md  ANALYTICS_DEPLOYMENT.md  ASYNC_OLLAMA_COMPLETE.md  AUTONOMOUS_TEST_GUIDE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  EPI DOC.md  EPI NEXUA VENTURES.ipynb  EPI_Investor_Demo_Colab_v2_8_2.ipynb  EPI_RECORDER_DEEP_DIVE.md  FINAL_COMPREHENSIVE_TEST.py  LANGGRAPH_DOCS_COMPLETE.md  MANIFEST.in  NEXUS VENTIRES DEMO SHOWING EPI'S SKILL.ipynb  PHASE1_MARKETING.md  README.md  REPOSITORY_ANALYSIS.md  ROBUST_TEST_REPORT.md  SECURITY.md  TEST_REPORT_DAY_1_3.md  TEST_RESULTS.md  WEBSITE.md  __viewer_template_body.txt  _e.py  _redirects  _test_scitt_aiuc1.py  _write_ref.py  action.yml  agicomply_demo.epi  audit.py  audit_chain.py  (+51 more)
.epi_test_state/: identity_map.json
.github/: PULL_REQUEST_TEMPLATE.md
.release-build-301/: .env.example  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Caddyfile  Dockerfile  LICENSE  MANIFEST.in  build_colab.py  colab_demo.ipynb  conftest.py  docker-compose.prod.yml  docker-compose.yml  epi-viewer.bat  epi.bat  epi_postinstall.py  epi_viewer.py  setup.py  technical_overview.md
.test_fresh/: pyvenv.cfg
.venv-311-test/: pyvenv.cfg
_cells/: cell_cta.py  cell_setup.py
assets/: sample.epi
audit_dir/: VERIFY.txt  analysis.json  environment.json  manifest.json  mimetype  policy_evaluation.json
demo_assets/: README.md
demo_workflows/: ai_moderation.py  content_moderation.epi  forensic_audit_demo.py  loan_approval.py  medical_triage.epi  medical_triage.py
demos/: accel_demo_colab.py  underwriter_agent.py
dist-test/: epi_recorder-4.1.0-py3-none-any.whl
docs/: ACTIONS.md  AGT-EXPORT.md  AGT-IMPORT-QUICKSTART.md  ANNEX-IV.md  AUDITORS-GUIDE.md  CEN-CENELEC-MAPPING.md  CLI.md  CLOUDFLARE_FUNCTIONS.md  CLOUDFLARE_PAGES.md  CNAME  COMPLETE_TECHNICAL_DOCUMENTATION.md  COMPLIANCE-QUICKSTART.md  CONNECT.md  DEMO-SCRIPT.md  DEPLOY_DNS.md  ENTERPRISE-EVIDENCE-PLAYBOOK.md  ENTERPRISE-TRUST-BUNDLE.md  ENTERPRISE-TRUST-PROFILE.md  EPI-ALGOVOI-INTEROP.md  EPI-CANONICAL-HASH.md  EPI-CODEBASE-WALKTHROUGH.md  EPI-DOC-v3.0.2.md  EPI-DOC-v4.0.0.md  EPI-DOC-v4.0.2.md  EPI-DOC-v4.1.0.md  EPI-DOC-v4.2.0.md  EPI-ENTERPRISE-REPORT.md  EPI-SPEC-v4.1.0-backup.md  EPI-SPEC.md  EPI_DOC.md  EU-AI-ACT-COMPLIANCE-MATRIX.md  EU-AI-ACT-EVIDENCE-PREP.md  EVIDENCE-ALIGNMENT.md  EXTERNAL-USER-READINESS-REPORT-v3.0.1.md  FIX_BACKLOG.md  FRAMEWORK-INTEGRATIONS-5-MINUTES.md  FREE_AUTH_DB_SETUP.md  INVESTOR-DEMO.md  KEEP_WARM.md  OPEN-CORE-ARCHITECTURE.md  (+14 more)
epi-action/: action.yml
epi-fresh-test/: demo_epi_session.py
epi-official/: CNAME  EPI_Accel_Atoms_Demo.ipynb  LICENSE  _nav.html  _redirects  account.html  contact.html  how-it-works.html  index-v4.1-backup.html  index.html  nav-partial.html  portal.html  pricing.html  privacy.html  refund.html  simulation.html  sitemap.xml  technology.html  terms.html  verify.html  welcome.html
epi-official-improvements/: README.md  website-improvements.patch
epi-viewer/: .gitignore  README.md  SETUP.md  main.js  package.json  preload.js  test-electron.js  test-minimal.js  test-signature.cjs
epi_analyzer/: __init__.py  detector.py
epi_cli/: __init__.py  __main__.py  _shared.py  agt_cmd.py  annex.py  audit.py  auth_cmd.py  chat.py  connect.py  debug.py  dev.py  export_summary.py  gateway.py  identity.py  importer.py  install.py  integrate.py  keys.py  ls.py  main.py  notify.py  onboarding.py  policy.py  record.py  review.py  role_bindings.py  run.py  scitt.py  share.py  telemetry.py  telemetry_hint.py  verify.py  view.py  view_server.py
epi_core/: __init__.py  aiuc1_mapping.py  annex_report_template.py  annex_schemas.py  artifact_inspector.py  auth_local.py  capture.py  case_store.py  connectors.py  container.py  did_web.py  eu_notification.py  evidence_profile.py  fault_analyzer.py  identity_signals.py  keys.py  llm_capture.py  local_scitt.py  notarize.py  policy.py  redactor.py  review.py  schemas.py  scitt.py  serialize.py  storage.py  telemetry.py  trust.py  viewer_assets.py  workspace.py
epi_gateway/: Dockerfile  main.py  share.py  test_gateway_local.py  worker.py
epi_guardrails/: __init__.py  instrumentor.py  session.py  state.py  step_types.py
epi_recorder/: __init__.py  api.py  async_api.py  auto.py  auto_scitt.py  bootstrap.py  environment.py  patcher.py  step_types.py
epi_viewer_static/: app.js  crypto.js  index.html  viewer_lite.css
epi_web_verifier/: sw.js
examples/: EPI DEMO.ipynb  advanced_demo.py  api_example.py  colab_test_run.py  complete_demo_workflow.py  complete_example.py  complex_rag_demo.py  decorator_example.py  demo_agent.epi  demo_controlled_failure.py  demo_python_api.py  demo_script.py  demo_workflow.py  epi_nexus_executive_demo.ipynb  epi_recorder_colab_demo.ipynb  hello_simple.py  live_demo_workflow.py  metadata_example.py  openai_example.py  quick_demo.py  quickstart.py  sentiment_analysis.py  simulate_agent.py  test_with_llm.py  view_example.py  visualization_script.py  zero_config_example.py
functions/: [[wellKnown]].js  _middleware.js  _proxy.js
js/: app.js  auth-ui.js  particles.js  terminal-demo.js
policies/: annex-compliance.json
pytest_epi/: plugin.py
release/: README.md  patch-4.0.2.txt
review/: VERIFY.txt  analysis.json  environment.json  manifest.json  policy.json  policy_evaluation.json  steps.jsonl
scratch/: debug_playwright.py  test_eq.py
scripts/: README.md  aiuc1_golden_artifact.py  audit_sdist.py  audit_wheel.py  backup-gateway.ps1  browser_additive_review_pack.mjs  browser_review_binding_check.mjs  browser_sign_seal_pack.mjs  build_blog.py  build_package.ps1  build_package.sh  cf-pages-build.mjs  check_guardrails_integration.py  check_keys.py  check_verify_alignment.py  comprehensive_validation.py  create_tampered.py  did_mismatch_attack.py  embed_scitt_into_artifact.py  epi_setup.py  final_check.py  final_validation.py  fix_manifest_sig.py  generated_code.py  install.ps1  install.sh  instrument_record.py  key_substitution_attack.py  (+21 more)
(+722 files in other folders)
