[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epi-recorder"
version = "2.4.0"
description = "Verifiable execution evidence for AI systems. Portable, cryptographically signed artifacts."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "EPI Labs", email = "mohdibrahim@epilabs.org"}
]
maintainers = [
    {name = "Mohd Ibrahim Afridi", email = "mohdibrahim@epilabs.org"}
]
keywords = [
    "evidence",
    "forensics",
    "audit",
    "compliance",
    "cryptography",
    "ai",
    "llm",
    "verification",
    "artifact",
    "execution-trace",
    "reproducibility",
    "tamper-evident"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Logging",
    "Typing :: Typed",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2"
]

dependencies = [
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "cbor2>=5.6.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "google-generativeai>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
epi = "epi_cli.main:app"

[project.urls]
Homepage = "https://epilabs.org"
Documentation = "https://epilabs.org/docs"
Repository = "https://github.com/mohdibrahimaiml/epi-recorder"
Issues = "https://github.com/mohdibrahimaiml/epi-recorder/issues"
Discussions = "https://github.com/mohdibrahimaiml/epi-recorder/discussions"

[tool.setuptools.packages.find]
where = ["."]
include = ["epi_core*", "epi_cli*", "epi_recorder*", "epi_analyzer*", "epi_viewer_static*", "epi_postinstall*"]

[tool.setuptools]
py-modules = ["epi_postinstall"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=epi_core --cov=epi_cli --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]


 