[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epi-recorder"
version = "4.0.1"
description = "Portable repro artifacts for AI agent runs. Capture, open, share, and verify failures in any browser."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
license-files = ["LICENSE"]
authors = [
    {name = "Mohd Ibrahim Afridi", email = "mohdibrahim@epilabs.org"}
]
maintainers = [
    {name = "Mohd Ibrahim Afridi", email = "mohdibrahim@epilabs.org"}
]
keywords = [
    "evidence",
    "forensics",
    "audit",
    "compliance",
    "cryptography",
    "ai",
    "llm",
    "verification",
    "artifact",
    "debugging",
    "bug-report",
    "incident-response",
    "pytest",
    "ci",
    "execution-trace",
    "reproducibility",
    "tamper-evident"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Logging",
    "Typing :: Typed",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2"
]

dependencies = [
    "pydantic>=2.0.0,<=2.12.3",
    "cryptography>=41.0.0,<44",
    "cbor2>=5.6.0",
    "typer>=0.12.0,<0.25",
    "rich>=13.0.0,<14",
]

[project.optional-dependencies]
ai = [
    "google-generativeai>=0.4.0",
]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.25.0",
]
litellm = [
    "litellm>=1.0.0",
]
langchain = [
    "langchain-core>=0.2.0",
]
langgraph = [
    "langgraph>=0.2.0",
]
opentelemetry = [
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
]
integrations = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "litellm>=1.0.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.2.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "guardrails-ai>=0.10.0",
    "wrapt>=1.16.0",
]
analytics = [
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
]
gateway = [
    "fastapi>=0.111.0,<1",
    "uvicorn>=0.30.0,<1",
    "boto3>=1.34.0",
]
all = [
    "google-generativeai>=0.4.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "litellm>=1.0.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.2.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "fastapi>=0.111.0,<1",
    "uvicorn>=0.30.0,<1",
    "boto3>=1.34.0",
    "guardrails-ai>=0.10.0",
    "wrapt>=1.16.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "pandas>=1.5.0",
    "fastapi>=0.111.0,<1",
    "uvicorn>=0.30.0,<1",
    "guardrails-ai>=0.10.0",
    "wrapt>=1.16.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.1",
    "pytest-playwright>=0.5.0",
    "playwright>=1.45.0",
    "httpx>=0.27.0",
    "fastapi>=0.111.0,<1",
    "uvicorn>=0.30.0,<1",
    "pandas>=1.5.0",
    "litellm>=1.0.0",
    "langchain-core>=0.2.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "guardrails-ai>=0.10.0",
    "wrapt>=1.16.0",
]

[project.scripts]
epi = "epi_cli.main:cli_main"

[project.urls]
Homepage = "https://epilabs.org"
Documentation = "https://epilabs.org/docs"
Repository = "https://github.com/mohdibrahimaiml/epi-recorder"
Issues = "https://github.com/mohdibrahimaiml/epi-recorder/issues"
Discussions = "https://github.com/mohdibrahimaiml/epi-recorder/discussions"

[tool.setuptools.packages.find]
where = ["."]
include = ["epi_core*", "epi_cli*", "epi_gateway*", "epi_recorder*", "epi_analyzer*", "epi_viewer_static*", "web_viewer*", "epi_postinstall*", "pytest_epi*", "epi_guardrails*"]

[tool.setuptools]
py-modules = ["epi_postinstall"]

[tool.setuptools.package-data]
epi_core = ["assets/*.ico"]
epi_viewer_static = ["*.html", "*.js", "*.css"]
web_viewer = ["*.html", "*.js", "*.css"]

[project.entry-points.pytest11]
epi = "pytest_epi.plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["tmp*", ".gen_tmp", ".tmp", ".pytest_cache", "htmlcov"]
addopts = "-v --cov=epi_core --cov=epi_cli --cov=epi_gateway --cov=epi_recorder --cov=pytest_epi --cov-report=term-missing --cov-report=html"
markers = [
    "unit: fast unit and adapter tests",
    "integration: multi-component offline tests",
    "security: cryptographic, redaction, and trust-boundary tests",
    "browser: browser-rendered viewer tests",
    "framework: optional framework integration tests",
    "e2e: full-system end-to-end lifecycle tests",
    "compliance: evidence-readiness and compliance-claim consistency tests",
    "slow: long-running or higher-cost local tests",
    "network: tests that are allowed to use external network access",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
